--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(cpu_emulator)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cpu_emulator main.cpp)
+add_executable(cpu_emulator main.cpp
+        instructions.cpp
+        instructions.h)
