--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(cpu_emulator main.cpp
         instructions.cpp
-        instructions.h)
+        instructions.h
+        utils.cpp
+        utils.h)
